--- a/public/500.html
+++ b/public/500.html
@@ -50,8 +50,8 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>Wie dit leest trekt een bak!</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Ha! Helaas. Je hebt deze pagina gevonden dus mag een bak trekken en een video hiervan in de chat zetten.</p>
 </body>
 </html>
