--- a/public/404.html
+++ b/public/404.html
@@ -50,9 +50,8 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+   <h1>Wie dit leest trekt een bak!</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Ha! Helaas. Je hebt deze pagina gevonden dus mag een bak trekken en een video hiervan in de chat zetten.</p>
 </body>
 </html>
